--- a/project.yml
+++ b/project.yml
@@ -54,7 +54,7 @@ sidebar:
           - title: Install Solaris HU 6.2
             url: /hu_solaris_62.html
           - title: Release notes
-            url: /hu_solaris_62_rn.html
+            url: /hu_solaris_62_cmd.html
       - title: Windows Unified Host Utilities
         entries:
           - title: Release notes
