--- a/project.yml
+++ b/project.yml
@@ -36,7 +36,7 @@ sidebar:
            url: /hu_hpux_60_rn.html
          - title: Install HP-UX HU 6.0
            url: /hu_hpux_60.html
-         - title: HP-UX 6.0 command reference
+         - title: Sample command reference
            url: /hu_hpux_60_cmd.html
          
       - title: Linux unified host utilities
