--- a/project.yml
+++ b/project.yml
@@ -53,7 +53,7 @@ sidebar:
             url: /hu_solaris_62_rn.html
           - title: Install Solaris HU 6.2
             url: /hu_solaris_62.html
-          - title: Release notes
+          - title: Sample command reference
             url: /hu_solaris_62_cmd.html
       - title: Windows Unified Host Utilities
         entries:
