Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/project.yml
+++ b/project.yml
@@ -39,7 +39,7 @@ sidebar:
          - title: Sample command reference
            url: /hu_hpux_60_cmd.html
          
-      - title: Linux unified host utilities
+      - title: Linux unified Host Utilities
         entries:
         - title: Release notes
           url: /hu_luhu_71_rn.html
