WUHU structural changes

--- a/project.yml
+++ b/project.yml
@@ -63,7 +63,13 @@ sidebar:
           - title: Install WUHU 7.2
             url: /hu_wuhu_72.html
           - title: Install WUHU 7.1
-            url: /hu_wuhu_71.html           
+            url: /hu_wuhu_71.html 
+          - title: Upgrade WUHU
+            url: /hu_wuhu_upgrade.html
+          - title: Repair or remove WUHU
+            url: /hu_wuhu_repair_remove.html
+          - title: Troubleshoot
+            url: /hu_wuhu_troubleshoot.html          
     - title: Configure hosts with FCP and iSCSI
       entries:
       - title: Overview
