WUHU structural updates

--- a/project.yml
+++ b/project.yml
@@ -68,6 +68,8 @@ sidebar:
             url: /hu_wuhu_upgrade.html
           - title: Repair or remove WUHU
             url: /hu_wuhu_repair_remove.html
+          - title: HBA settings 
+            url: /hu_wuhu_hba_settings.html
           - title: Troubleshoot
             url: /hu_wuhu_troubleshoot.html          
     - title: Configure hosts with FCP and iSCSI
