project.yml minor edit

--- a/project.yml
+++ b/project.yml
@@ -18,11 +18,11 @@ sidebar:
       url: /index.html  
     - title: Overview
       url: /overview.html
-    - title: Install SAN Host Utilities
+    - title: Install SAN host utilities
       entries:
       - title: Overview
         url: /hu_sanhost_index.html
-      - title: AIX Host Utilities
+      - title: AIX host utilities
         entries:
           - title: Release notes
             url: /hu_aix_61_rn.html
@@ -30,7 +30,7 @@ sidebar:
             url: /hu_aix_61.html
           - title: Sample command reference
             url: /hu_aix_61_cmd.html
-      - title: HP-UX Host Utilities
+      - title: HP-UX host utilities
         entries:
          - title: Release notes
            url: /hu_hpux_60_rn.html
@@ -39,7 +39,7 @@ sidebar:
          - title: Sample command reference
            url: /hu_hpux_60_cmd.html
          
-      - title: Linux unified Host Utilities
+      - title: Linux unified host utilities
         entries:
         - title: Release notes
           url: /hu_luhu_71_rn.html
@@ -56,7 +56,7 @@ sidebar:
             url: /hu_solaris_62.html
           - title: Sample command reference
             url: /hu_solaris_62_cmd.html
-      - title: Windows Unified Host Utilities
+      - title: Windows unified host utilities
         entries:
           - title: Release notes
             url: /hu_wuhu_71_rn.html
