--- a/project.yml
+++ b/project.yml
@@ -22,7 +22,7 @@ sidebar:
       entries:
       - title: Overview
         url: /hu_sanhost_index.html
-      - title: AIX host utilities
+      - title: AIX Host Utilities
         entries:
           - title: Release notes
             url: /hu_aix_61_rn.html
@@ -30,7 +30,7 @@ sidebar:
             url: /hu_aix_61.html
           - title: Sample command reference
             url: /hu_aix_61_cmd.html
-      - title: HP-UX host utilities
+      - title: HP-UX Host Utilities
         entries:
          - title: Release notes
            url: /hu_hpux_60_rn.html
@@ -39,7 +39,7 @@ sidebar:
          - title: Sample command reference
            url: /hu_hpux_60_cmd.html
          
-      - title: Linux unified host utilities
+      - title: Linux Unified Host Utilities
         entries:
         - title: Release notes
           url: /hu_luhu_71_rn.html
@@ -48,7 +48,7 @@ sidebar:
         - title: Sample command reference
           url: /hu_luhu_71_cmd.html
         
-      - title: Solaris host utilities
+      - title: Solaris Host Utilities
         entries:
           - title: Release notes
             url: /hu_solaris_62_rn.html
