--- a/project.yml
+++ b/project.yml
@@ -56,7 +56,7 @@ sidebar:
             url: /hu_solaris_62.html
           - title: Sample command reference
             url: /hu_solaris_62_cmd.html
-      - title: Windows unified host utilities
+      - title: Windows Unified Host Utilities
         entries:
           - title: Release notes
             url: /hu_wuhu_71_rn.html
