--- a/project.yml
+++ b/project.yml
@@ -229,6 +229,8 @@ sidebar:
         - title: RHEL 9
           pdf-filename: RHEL-9-FCP
           entries:
+          - title: 9.3
+            url: /hu_rhel_93.html
           - title: 9.2
             url: /hu_rhel_92.html
           - title: 9.1
@@ -410,6 +412,8 @@ sidebar:
         entries:
         - title: RHEL 9
           entries:
+          - title: 9.3
+            url: /nvme_rhel_93.html
           - title: 9.2
             url: /nvme_rhel_92.html
           - title: 9.1
