--- a/project.yml
+++ b/project.yml
@@ -66,7 +66,7 @@ sidebar:
             url: /hu_wuhu_71.html 
           - title: Upgrade WUHU
             url: /hu_wuhu_upgrade.html
-          - title: Repair or remove WUHU
+          - title: Repair and remove WUHU
             url: /hu_wuhu_repair_remove.html
           - title: Configure registry settings
             url: /hu_wuhu_hba_settings.html
