--- a/project.yml
+++ b/project.yml
@@ -250,7 +250,7 @@ sidebar:
         - title: RHEL 8
           pdf-filename: RHEL-8-FCP
           entries:
-          - title: 8.10
+          - title: "8.10"
             url: /hu_rhel_810.html
           - title: 8.9
             url: /hu_rhel_89.html
@@ -445,7 +445,7 @@ sidebar:
             url: /nvme_rhel_90.html
         - title: RHEL 8
           entries:
-          - title: 8.10
+          - title: "8.10"
             url: /nvme_rhel_810.html
           - title: 8.9
             url: /nvme_rhel_89.html
