Adding SLES15 SP6

--- a/project.yml
+++ b/project.yml
@@ -470,6 +470,8 @@ sidebar:
         entries:
         - title: SLES 15
           entries:
+          - title: 15 SP6
+            url: /nvme_sles15_sp6.html
           - title: 15 SP5
             url: /nvme_sles15_sp5.html
           - title: 15 SP4
