--- a/project.yml
+++ b/project.yml
@@ -325,6 +325,8 @@ sidebar:
         - title: SLES 15
           pdf-filename: SLES-15-FCP
           entries:
+          - title: 15 SP6
+            url: /hu_sles_15SP6.html
           - title: 15 SP5
             url: /hu_sles_15SP5.html
           - title: 15 SP4
