--- a/project.yml
+++ b/project.yml
@@ -80,7 +80,7 @@ sidebar:
         entries:
         - title: 7.2/3.1
           url: /hu_aix_72.html
-        - title: 7.1
+        - title: "7.1"
           url: /hu_aix_71.html
       - title: CentOS
         entries:
@@ -335,7 +335,7 @@ sidebar:
             url: /hu_sles_15SP2.html
           - title: 15 SP1
             url: /hu_sles_15SP1.html
-          - title: 15
+          - title: "15"
             url: /hu_sles_15.html
         - title: SLES 12
           entries:
