--- a/project.yml
+++ b/project.yml
@@ -502,5 +502,5 @@ sidebar:
       - title: Troubleshoot
         url: /troubleshoot.html
     - title: Legal notices
-      url: /legal_notices.html
+      url: /legal-notices.html
       
