formatting edits in project.yml

--- a/project.yml
+++ b/project.yml
@@ -163,9 +163,9 @@ sidebar:
           url: /hu_ol_asm_release_notes.html
         - title: OL 9
           entries:
-          - title: 9.3
+          - title: "9.3"
             url: /hu_ol_93.html
-          - title: 9.2
+          - title: "9.2"
             url: /hu_ol_92.html
           - title: "9.1"
             url: /hu_ol_91.html
@@ -397,7 +397,7 @@ sidebar:
         - title: OL 9
           pdf-filename: NVMeF OL
           entries:
-          - title: 9.3
+          - title: "9.3"
             url: /nvme_ol_93.html
           - title: "9.2"
             url: /nvme_ol_92.html
