--- a/project.yml
+++ b/project.yml
@@ -26,6 +26,8 @@ sidebar:
         entries:
           - title: Release notes
             url: /hu_aix_61_rn.html
+          - title: Install AIX HU 7.0
+            url: /hu-aix-70.html
           - title: Install AIX HU 6.1
             url: /hu_aix_61.html
           - title: Sample command reference
