IE review comments

--- a/project.yml
+++ b/project.yml
@@ -25,7 +25,7 @@ sidebar:
       - title: AIX Host Utilities
         entries:
           - title: Release notes
-            url: /hu_aix_61_rn.html
+            url: /hu_aix_rn.html
           - title: Install AIX HU 7.0
             url: /hu-aix-70.html
           - title: Install AIX HU 6.1
