--- a/project.yml
+++ b/project.yml
@@ -331,6 +331,8 @@ sidebar:
         - title: SLES 15
           pdf-filename: SLES-15-FCP
           entries:
+          - title: 15 SP6
+            url: /hu_sles_15SP6.html
           - title: 15 SP5
             url: /hu_sles_15SP5.html
           - title: 15 SP4
@@ -480,6 +482,8 @@ sidebar:
         entries:
         - title: SLES 15
           entries:
+          - title: 15 SP6
+            url: /nvme_sles15_sp6.html
           - title: 15 SP5
             url: /nvme_sles15_sp5.html
           - title: 15 SP4
