Add hu_ubuntu 24.04

--- a/project.yml
+++ b/project.yml
@@ -362,6 +362,8 @@ sidebar:
       - title: Ubuntu
         pdf-filename: Ubuntu-FCP
         entries:
+        - title: "24.04" 
+          url: /hu_ubuntu_2404.html
         - title: "22.04"
           url: /hu_ubuntu_2204.html
         - title: "20.04"
