Adding NVMe Ubuntu 24.04

--- a/project.yml
+++ b/project.yml
@@ -499,6 +499,8 @@ sidebar:
       - title: Ubuntu
         pdf-filename: NVMeoF Ubuntu
         entries:
+        - title: "24.04"
+          url: /nvme_ubuntu_2404.html
         - title: "22.04"
           url: /nvme_ubuntu_2204.html
       - title: Windows
