--- a/project.yml
+++ b/project.yml
@@ -377,6 +377,8 @@ sidebar:
       - title: Windows
         pdf-filename: Windows-FCP
         entries:
+        - title: "2025"
+          url: /hu_windows_2025.html
         - title: "2022"
           url: /hu_windows_2022.html
         - title: "2019"
