--- a/project.yml
+++ b/project.yml
@@ -243,6 +243,8 @@ sidebar:
         - title: RHEL 9
           pdf-filename: RHEL-9-FCP
           entries:
+          - title: "9.5"
+            url: /hu_rhel_95.html
           - title: "9.4"
             url: /hu_rhel_94.html
           - title: "9.3"
