continued updates to 9.5 RHEL

--- a/project.yml
+++ b/project.yml
@@ -447,6 +447,8 @@ sidebar:
         entries:
         - title: RHEL 9
           entries:
+          - title: "9.5"
+            url: /nvme_rhel_95.html
           - title: "9.4"
             url: /nvme_rhel_94.html
           - title: "9.3"
