consistency in use of NetApp and HU  product titles

--- a/_index.yml
+++ b/_index.yml
@@ -12,7 +12,7 @@ indexpage:
           url: /hu_aix_rn.html
         - title: HP-UX Host Utilities release notes
           url: /hu_hpux_60_rn.html
-        - title: Linux Host Utilities release notes
+        - title: Linux Unified Host Utilities release notes
           url: /hu_luhu_71_rn.html
         - title: Solaris Host Utilities release notes
           url: /hu_solaris_62_rn.html 
