--- a/project.yml
+++ b/project.yml
@@ -18,7 +18,7 @@ sidebar:
       url: /index.html  
     - title: Overview
       url: /overview.html
-    - title: Install SAN host utilities
+    - title: Install SAN Host Utilities
       entries:
       - title: Overview
         url: /hu_sanhost_index.html
