updates for 9.4 release

--- a/project.yml
+++ b/project.yml
@@ -165,6 +165,8 @@ sidebar:
           url: /hu_ol_asm_release_notes.html
         - title: OL 9
           entries:
+          - title: "9.4"
+            url: /hu_ol_94.html
           - title: "9.3"
             url: /hu_ol_93.html
           - title: "9.2"
