--- a/project.yml
+++ b/project.yml
@@ -411,6 +411,8 @@ sidebar:
         - title: OL 9
           pdf-filename: NVMeF OL
           entries:
+          - title: "9.4"
+            url: /nvme_ol_94.html
           - title: "9.3"
             url: /nvme_ol_93.html
           - title: "9.2"
