--- a/project.yml
+++ b/project.yml
@@ -45,7 +45,7 @@ sidebar:
         entries:
         - title: Release notes
           url: /hu_luhu_71_rn.html
-        - title: Install LUHU 7.1
+        - title: Install Linux Unified Host Utilities 7.1
           url: /hu_luhu_71.html
         - title: Sample command reference
           url: /hu_luhu_71_cmd.html
