Add Windows 2025 with NVMe

--- a/project.yml
+++ b/project.yml
@@ -519,6 +519,8 @@ sidebar:
           url: /nvme_ubuntu_2204.html
       - title: Windows
         entries:
+        - title: "2025"
+          url: /nvme_windows_2025.html  
         - title: "2022"
           url: /nvme_windows_2022.html
         - title: "2019"
