replace underscore with hyphen for Windows 2025 adocs

--- a/project.yml
+++ b/project.yml
@@ -386,7 +386,7 @@ sidebar:
         pdf-filename: Windows-FCP
         entries:
         - title: "2025"
-          url: /hu_windows_2025.html
+          url: /hu-windows-2025.html
         - title: "2022"
           url: /hu_windows_2022.html
         - title: "2019"
@@ -520,7 +520,7 @@ sidebar:
       - title: Windows
         entries:
         - title: "2025"
-          url: /nvme_windows_2025.html  
+          url: /nvme-windows-2025.html  
         - title: "2022"
           url: /nvme_windows_2022.html
         - title: "2019"
