Replace 'Overview' titles for intro and Host Utilities

--- a/project.yml
+++ b/project.yml
@@ -16,11 +16,11 @@ sidebar:
   entries:
     - title: Configure SAN hosts and cloud clients
       url: /index.html  
-    - title: Overview
+    - title: Learn about SAN host configurations
       url: /overview.html
     - title: Install SAN Host Utilities
       entries:
-      - title: Overview
+      - title: Learn about SAN Host Utilities
         url: /hu_sanhost_index.html
       - title: AIX Host Utilities
         entries:
