ontapdoc-2896 Creating sidebar and adocs

--- a/project.yml
+++ b/project.yml
@@ -318,6 +318,40 @@ sidebar:
             url: /hu_rhel_65.html
           - title: "6.4"
             url: /hu_rhel_64.html
+      - title: Rocky Linux
+        entries:
+        - title: Rocky Linux 9
+          pdf-filename: RL-9-FCP
+          entries:
+          - title: "9.5"
+            url: /hu-rl-95.html
+          - title: "9.4"
+            url: /hu-rl-94.html
+          - title: "9.3"
+            url: /hu-rl-93.html
+          - title: "9.2"
+            url: /hu-rl-92.html
+          - title: "9.1"
+            url: /hu-rl-91.html
+          - title: "9.0"
+            url: /hu-rl-90.html 
+        - title: Rocky Linux 8
+          pdf-filename: RL-8-FCP
+          entries:
+          - title: "8.10"
+            url: /hu-rl-810.html
+          - title: "8.9"
+            url: /hu-rl-89.html
+          - title: "8.8"
+            url: /hu-rl-88.html
+          - title: "8.7"
+            url: /hu-rl-87.html
+          - title: "8.6"
+            url: /hu-rl_86.html
+          - title: "8.5"
+            url: /hu-rl-85.html
+          - title: "8.4"
+            url: /hu-rl-84.html      
       - title: Solaris
         entries:
         - title: "11.4"
