fix broken links

--- a/project.yml
+++ b/project.yml
@@ -347,7 +347,7 @@ sidebar:
           - title: "8.7"
             url: /hu-rl-87.html
           - title: "8.6"
-            url: /hu-rl_86.html
+            url: /hu-rl-86.html
           - title: "8.5"
             url: /hu-rl-85.html
           - title: "8.4"
