--- a/project.yml
+++ b/project.yml
@@ -485,7 +485,7 @@ sidebar:
             url: /nvme_rhel_82.html
           - title: "8.1"
             url: /nvme_rhel_81.html
-      - title: RHEL
+      - title: Rocky Linux
         pdf-filename: NVMeoF Rocky Linux
         entries:
         - title: Rocky Linux 9
