--- a/project.yml
+++ b/project.yml
@@ -1,6 +1,6 @@
 ---
 settings:
-  name: SAN hosts and cloud clients
+  name: ONTAP SAN hosts and cloud clients
   internal:
     pdf_enabled: true
   prod:
@@ -14,7 +14,7 @@ product-family:
 
 sidebar:
   entries:
-    - title: Configure SAN hosts and cloud clients
+    - title: ONTAP SAN hosts and cloud clients
       url: /index.html  
     - title: Learn about SAN host configurations
       url: /overview.html
