ontapdoc-2879 folder update

--- a/project.yml
+++ b/project.yml
@@ -54,6 +54,12 @@ sidebar:
         entries:
           - title: Release notes
             url: /hu_solaris_62_rn.html
+      - title: Solaris
+        entries:
+        - title: "11.4"
+          url: /hu_solaris_114.html
+        - title: "11.3"
+          url: /hu_solaris_113.html            
           - title: Install Solaris HU 6.2
             url: /hu_solaris_62.html
           - title: Sample command reference
