ontapdoc-2879 release notes

--- a/project.yml
+++ b/project.yml
@@ -51,15 +51,15 @@ sidebar:
       - title: Solaris Host Utilities
         entries:
         - title: Release notes
-          url: /hu_solaris_62_rn.html
-        - title: Sample command reference
-          url: /hu_solaris_62_cmd.html
-        - title: Solaris Install
+          url: /hu_solaris_80_rn.html
+        - title: Install
           entries:
-          - title: "11.4"
-            url: /hu_solaris_114.html
+          - title: Install Solaris HU 8.0
+            url: /hu_solaris_80.html
           - title: Install Solaris HU 6.2
             url: /hu_solaris_62.html
+        - title: Sample command reference
+          url: /hu_solaris_62_cmd.html
       - title: Windows Host Utilities
         entries:
         - title: Release notes
