Creating first draft of the Solaris 11.4 fcp/iscsi configuration procedure

--- a/project.yml
+++ b/project.yml
@@ -321,7 +321,7 @@ sidebar:
       - title: Solaris
         entries:
         - title: "11.4"
-          url: /hu_solaris_114.html
+          url: /hu-solaris-114.html
         - title: "11.3"
           url: /hu_solaris_113.html
       - title: SUSE Linux Enterprise Server
