--- a/project.yml
+++ b/project.yml
@@ -55,7 +55,7 @@ sidebar:
         - title: Install
           entries:
           - title: Install Solaris HU 8.0
-            url: /hu_solaris_80.html
+            url: /hu-solaris-80.html
           - title: Install Solaris HU 6.2
             url: /hu_solaris_62.html
         - title: Sample command reference
