Add Solaris Toolkit to the sidebar. Content improvements to solaris 6.2.

--- a/project.yml
+++ b/project.yml
@@ -58,6 +58,8 @@ sidebar:
             url: /hu-solaris-80.html
           - title: Install Solaris HU 6.2
             url: /hu_solaris_62.html
+        - title: Learn about the SAN Toolkit
+          url: /hu-solaris-san-toolkit.html
         - title: Sample command reference
           url: /hu_solaris_80_cmd.html
       - title: Windows Host Utilities
