Add solaris 8.0 release notes

--- a/_index.yml
+++ b/_index.yml
@@ -15,7 +15,7 @@ indexpage:
         - title: Linux Host Utilities release notes
           url: /hu_luhu_71_rn.html
         - title: Solaris Host Utilities release notes
-          url: /hu_solaris_62_rn.html 
+          url: /hu-solaris-80-rn.html 
         - title: Windows Host Utilities release notes
           url: /hu_wuhu_71_rn.html                       
     - title: Install and configure SAN hosts
