removing underscores from adoc names

--- a/project.yml
+++ b/project.yml
@@ -324,34 +324,34 @@ sidebar:
           pdf-filename: RL-9-FCP
           entries:
           - title: "9.5"
-            url: /hu-rl-95.html
+            url: /hu-rockylinux-95.html
           - title: "9.4"
-            url: /hu-rl-94.html
+            url: /hu-rockylinux-94.html
           - title: "9.3"
-            url: /hu-rl-93.html
+            url: /hu-rockylinux-93.html
           - title: "9.2"
-            url: /hu-rl-92.html
+            url: /hu-rockylinux-92.html
           - title: "9.1"
-            url: /hu-rl-91.html
+            url: /hu-rockylinux-91.html
           - title: "9.0"
-            url: /hu-rl-90.html 
+            url: /hu-rockylinux-90.html 
         - title: Rocky Linux 8
           pdf-filename: RL-8-FCP
           entries:
           - title: "8.10"
-            url: /hu-rl-810.html
+            url: /hu-rockylinux-810.html
           - title: "8.9"
-            url: /hu-rl-89.html
+            url: /hu-rockylinux-89.html
           - title: "8.8"
-            url: /hu-rl-88.html
+            url: /hu-rockylinux-88.html
           - title: "8.7"
-            url: /hu-rl-87.html
+            url: /hu-rockylinux-87.html
           - title: "8.6"
-            url: /hu-rl-86.html
+            url: /hu-rockylinux-86.html
           - title: "8.5"
-            url: /hu-rl-85.html
+            url: /hu-rockylinux-85.html
           - title: "8.4"
-            url: /hu-rl-84.html      
+            url: /hu-rockylinux-84.html      
       - title: Solaris
         entries:
         - title: "11.4"
@@ -525,33 +525,33 @@ sidebar:
         - title: Rocky Linux 9
           entries:
           - title: "9.5"
-            url: /nvme_rockylinux_95.html 
+            url: /nvme-rockylinux-95.html 
           - title: "9.4"
-            url: /nvme_rockylinux_94.html
+            url: /nvme-rockylinux-94.html
           - title: "9.3"
-            url: /nvme_rockylinux_93.html
+            url: /nvme-rockylinux-93.html
           - title: "9.2"
-            url: /nvme_rockylinux_92.html
+            url: /nvme-rockylinux-92.html
           - title: "9.1"
-            url: /nvme_rockylinux_91.html
+            url: /nvme-rockylinux-91.html
           - title: "9.0"
-            url: /nvme_rockylinux_90.html
+            url: /nvme-rockylinux-90.html
         - title: Rocky Linux 8
           entries:
           - title: "8.10"
-            url: /nvme_rockylinux_810.html
+            url: /nvme-rockylinux-810.html
           - title: "8.9"
-            url: /nvme_rockylinux_89.html
+            url: /nvme-rockylinux-89.html
           - title: "8.8"
-            url: /nvme_rockylinux_88.html
+            url: /nvme-rockylinux-88.html
           - title: "8.7"
-            url: /nvme_rockylinux_87.html
+            url: /nvme-rockylinux-87.html
           - title: "8.6"
-            url: /nvme_rockylinux_86.html
+            url: /nvme-rockylinux-86.html
           - title: "8.5"
-            url: /nvme_rockylinux_85.html
+            url: /nvme-rockylinux-85.html
           - title: "8.4"
-            url: /nvme_rockylinux_84.html
+            url: /nvme-rockylinux-84.html
       - title: SUSE Linux Enterprise Server
         pdf-filename: NVMeoF SLES
         entries:
