--- a/project.yml
+++ b/project.yml
@@ -24,28 +24,23 @@ sidebar:
         url: /hu_sanhost_index.html
       - title: AIX Host Utilities
         entries:
-        - title: Release notes
-          url: /hu_aix_rn.html
-        - titles: Install AIX Host Utilities
-          entries:
-          - title: Install AIX HU 8.0
-            url: /hu-aix-80.html
+          - title: Release notes
+            url: /hu_aix_rn.html
           - title: Install AIX HU 7.0
             url: /hu-aix-70.html
           - title: Install AIX HU 6.1
             url: /hu_aix_61.html
-        - title: Learn about the AIX SAN Toolkit
-          url: /hu-aix-san-toolkit.html
-        - title: Sample command reference
-          url: /hu_aix_61_cmd.html
+          - title: Sample command reference
+            url: /hu_aix_61_cmd.html
       - title: HP-UX Host Utilities
         entries:
-        - title: Release notes
-          url: /hu_hpux_60_rn.html
-        - title: Install HP-UX HU 6.0
-          url: /hu_hpux_60.html
-        - title: Sample command reference
-          url: /hu_hpux_60_cmd.html         
+         - title: Release notes
+           url: /hu_hpux_60_rn.html
+         - title: Install HP-UX HU 6.0
+           url: /hu_hpux_60.html
+         - title: Sample command reference
+           url: /hu_hpux_60_cmd.html
+         
       - title: Linux Host Utilities
         entries:
         - title: Release notes
@@ -53,40 +48,39 @@ sidebar:
         - title: Install Linux Host Utilities 7.1
           url: /hu_luhu_71.html
         - title: Sample command reference
-          url: /hu_luhu_71_cmd.html        
+          url: /hu_luhu_71_cmd.html
+        
       - title: Solaris Host Utilities
         entries:
-        - title: Release notes
-          url: /hu_solaris_62_rn.html
-        - title: Install Solaris HU 6.2
-          url: /hu_solaris_62.html
-        - title: Sample command reference
-          url: /hu_solaris_62_cmd.html
+          - title: Release notes
+            url: /hu_solaris_62_rn.html
+          - title: Install Solaris HU 6.2
+            url: /hu_solaris_62.html
+          - title: Sample command reference
+            url: /hu_solaris_62_cmd.html
       - title: Windows Host Utilities
         entries:
-        - title: Release notes
-          url: /hu_wuhu_71_rn.html
-        - title: Install Windows Host Utilities 7.2
-          url: /hu_wuhu_72.html
-        - title: Install Windows Host Utilities 7.1
-          url: /hu_wuhu_71.html 
-        - title: Upgrade Windows Host Utilities
-          url: /hu_wuhu_upgrade.html
-        - title: Repair and remove Windows Host Utilities
-          url: /hu_wuhu_repair_remove.html
-        - title: Configure registry settings
-          url: /hu_wuhu_hba_settings.html
-        - title: Troubleshoot
-          url: /hu_wuhu_troubleshoot.html          
+          - title: Release notes
+            url: /hu_wuhu_71_rn.html
+          - title: Install Windows Host Utilities 7.2
+            url: /hu_wuhu_72.html
+          - title: Install Windows Host Utilities 7.1
+            url: /hu_wuhu_71.html 
+          - title: Upgrade Windows Host Utilities
+            url: /hu_wuhu_upgrade.html
+          - title: Repair and remove Windows Host Utilities
+            url: /hu_wuhu_repair_remove.html
+          - title: Configure registry settings
+            url: /hu_wuhu_hba_settings.html
+          - title: Troubleshoot
+            url: /hu_wuhu_troubleshoot.html          
     - title: Configure hosts with FCP and iSCSI
       entries:
       - title: Overview
         url: /hu_fcp_scsi_index.html
       - title: AIX and PowerVM/VIOS
         entries:
-        - title: "7.3/4.x"
-          url: /hu-aix-73.html
-        - title: "7.2/3.1"
+        - title: 7.2/3.1
           url: /hu_aix_72.html
         - title: "7.1"
           url: /hu_aix_71.html
