--- a/project.yml
+++ b/project.yml
@@ -28,10 +28,14 @@ sidebar:
             url: /hu_aix_rn.html
           - title: Install AIX HU
             entries:
-            - title: Install AIX HU 6.1
+            - title: Install AIX HU 8.0
+              url: /hu-aix-80.html
+            - title: Install AIX HU 7.0
               url: /hu-aix-70.html
             - title: Install AIX HU 6.1
               url: /hu_aix_61.html
+          - title: Learn about the AIX SAN Tollkit
+            url: /hu-aix-san-toolkit.html
           - title: Sample command reference
             url: /hu_aix_61_cmd.html
       - title: HP-UX Host Utilities
