--- a/project.yml
+++ b/project.yml
@@ -26,23 +26,27 @@ sidebar:
         entries:
           - title: Release notes
             url: /hu_aix_rn.html
-          - title: Install AIX HU
+          - title: Install AIX Host Utilities
             entries:
-            - title: Install AIX HU 8.0
+            - title: Install AIX Host Utilities 8.0
               url: /hu-aix-80.html
-            - title: Install AIX HU 7.0
+            - title: Install AIX Host Utilities 7.0
               url: /hu-aix-70.html
-            - title: Install AIX HU 6.1
+            - title: Install AIX Host Utilities 6.1
               url: /hu_aix_61.html
           - title: Learn about the AIX SAN Tollkit
             url: /hu-aix-san-toolkit.html
-          - title: Sample command reference
-            url: /hu_aix_61_cmd.html
+          - title: Learn about the AIX Host Utilities command reference
+            entries:
+            - title: AIX Host Utilities 8.0 command reference
+              url: /hu-aix-80-command-reference.html
+            - title: AIX Host Utilities 6.1 command reference
+              url: /hu_aix_61_cmd.html
       - title: HP-UX Host Utilities
         entries:
          - title: Release notes
            url: /hu_hpux_60_rn.html
-         - title: Install HP-UX HU 6.0
+         - title: Install HP-UX Host Utilities 6.0
            url: /hu_hpux_60.html
          - title: Sample command reference
            url: /hu_hpux_60_cmd.html
