--- a/project.yml
+++ b/project.yml
@@ -90,6 +90,8 @@ sidebar:
         url: /hu_fcp_scsi_index.html
       - title: AIX and PowerVM/VIOS
         entries:
+        - title: 7.3/4.x
+          url: /hu-aix-73.html
         - title: 7.2/3.1
           url: /hu_aix_72.html
         - title: "7.1"
