Content improvements for AIX 7.2 and 7.1

--- a/project.yml
+++ b/project.yml
@@ -36,7 +36,7 @@ sidebar:
               url: /hu_aix_61.html
           - title: Learn about the AIX SAN Tollkit
             url: /hu-aix-san-toolkit.html
-          - title: Learn about the AIX Host Utilities command reference
+          - title: AIX Host Utilities command reference
             entries:
             - title: AIX Host Utilities 8.0 command reference
               url: /hu-aix-80-command-reference.html
