Update the solaris 8.0 release notes

--- a/_index.yml
+++ b/_index.yml
@@ -9,15 +9,15 @@ indexpage:
         - title: Product overview
           url: /overview.html
         - title: AIX Host Utilities release notes
-          url: /hu_aix_rn.html
+          url: /hu-aix-rn.html
         - title: HP-UX Host Utilities release notes
           url: /hu_hpux_60_rn.html
         - title: Linux Host Utilities release notes
           url: /hu_luhu_71_rn.html
         - title: Solaris Host Utilities release notes
-          url: /hu-solaris-80-rn.html 
+          url: /hu-solaris-rn.html 
         - title: Windows Host Utilities release notes
-          url: /hu_wuhu_71_rn.html                       
+          url: /hu-wuhu-rn.html                       
     - title: Install and configure SAN hosts
       links:
         - title: Install SAN Host Utilities 
