--- a/project.yml
+++ b/project.yml
@@ -1,6 +1,6 @@
 ---
 settings:
-  name: ONTAP SAN hosts and cloud clients
+  name: ONTAP SAN Host Utilities
   internal:
     pdf_enabled: true
   prod:
