Update cross references to Solaris command reference

--- a/_index.yml
+++ b/_index.yml
@@ -15,7 +15,7 @@ indexpage:
         - title: Linux Host Utilities release notes
           url: /hu_luhu_71_rn.html
         - title: Solaris Host Utilities release notes
-          url: /hu-solaris-rn.html 
+          url: /hu-solaris-release-notes.html 
         - title: Windows Host Utilities release notes
           url: /hu-wuhu-rn.html                       
     - title: Install and configure SAN hosts
