--- a/project.yml
+++ b/project.yml
@@ -51,7 +51,7 @@ sidebar:
       - title: Solaris Host Utilities
         entries:
         - title: Solaris Host Utilities Release Notes
-          url: /hu-solaris-rn.html
+          url: /hu-solaris-release-notes.html
         - title: Install Solaris Host Utilities
           entries:
           - title: Install Solaris Host Utilities 8.0
@@ -61,11 +61,7 @@ sidebar:
         - title: Learn about the Solaris SAN Toolkit
           url: /hu-solaris-san-toolkit.html
         - title: Learn about the Solaris command reference
-          entries:
-          - title: Solaris Host Utilities 8.0 command reference
-            url: /hu-solaris-80-cmd.html
-          - title: Solaris Host Utilities 6.2 command reference
-            url: /hu_solaris_62_cmd.html
+          url: /hu-solaris-command-reference.html
       - title: Windows Host Utilities
         entries:
         - title: Release notes
