Add redirect for Linux release notes

--- a/_index.yml
+++ b/_index.yml
@@ -13,7 +13,7 @@ indexpage:
         - title: HP-UX Host Utilities release notes
           url: /hu_hpux_60_rn.html
         - title: Linux Host Utilities release notes
-          url: /hu_luhu_71_rn.html
+          url: /hu-luhu-release-notes.html
         - title: Solaris Host Utilities release notes
           url: /hu_solaris_62_rn.html 
         - title: Windows Host Utilities release notes
