--- a/project.yml
+++ b/project.yml
@@ -44,7 +44,7 @@ sidebar:
       - title: Linux Host Utilities
         entries:
         - title: Release notes
-          url: /hu_luhu_71_rn.html
+          url: /hu-luhu-release-notes.html
         - title: Install Linux Host Utilities 8.0
           url: /hu-luhu-80.html
         - title: Install Linux Host Utilities 7.1
