--- a/project.yml
+++ b/project.yml
@@ -14,7 +14,7 @@ product-family:
 
 sidebar:
   entries:
-    - title: Configure ONTAP SAN hosts and cloud clients
+    - title: Configure SAN hosts and cloud clients
       url: /index.html  
     - title: Learn about SAN host configurations
       url: /overview.html
