Creating redirects and updating tabbed content

--- a/project.yml
+++ b/project.yml
@@ -25,7 +25,7 @@ sidebar:
       - title: AIX Host Utilities
         entries:
           - title: Release notes
-            url: /hu-aix-rn.html
+            url: /hu-aix-release-notes.html
           - title: Install AIX Host Utilities
             entries:
             - title: Install AIX Host Utilities 8.0
