--- a/_index.yml
+++ b/_index.yml
@@ -9,7 +9,7 @@ indexpage:
         - title: Product overview
           url: /overview.html
         - title: AIX Host Utilities release notes
-          url: /hu-aix-rn.html
+          url: /hu-aix-release-notes.html
         - title: HP-UX Host Utilities release notes
           url: /hu_hpux_60_rn.html
         - title: Linux Host Utilities release notes
