--- a/project.yml
+++ b/project.yml
@@ -45,12 +45,14 @@ sidebar:
         entries:
         - title: Release notes
           url: /hu-luhu-release-notes.html
-        - title: Install Linux Host Utilities 8.0
-          url: /hu-luhu-80.html
-        - title: Install Linux Host Utilities 7.1
-          url: /hu_luhu_71.html
-        - title: Learn about the Linux SAN Toolkit for ONTAP storage
-          url: /hu-luhu-san-toolkit.html
+        - title: Install Linux Host Utilities
+          entries:
+          - title: Install Linux Host Utilities 8.0
+            url: /hu-luhu-80.html
+          - title: Install Linux Host Utilities 7.1
+            url: /hu_luhu_71.html
+        - title: Learn about the Linux "sanlun" utility 
+          url: /hu-luhu-sanlun-utility.html
         - title: Sample command reference
           url: /hu_luhu_71_cmd.html
         
