Remove apostrophes from title in project.yml

--- a/project.yml
+++ b/project.yml
@@ -51,7 +51,7 @@ sidebar:
             url: /hu-luhu-80.html
           - title: Install Linux Host Utilities 7.1
             url: /hu_luhu_71.html
-        - title: Learn about the Linux "sanlun" utility 
+        - title: Learn about the Linux sanlun utility 
           url: /hu-luhu-sanlun-utility.html
         - title: Sample command reference
           url: /hu_luhu_71_cmd.html
