Fix broken link and other minor edits

--- a/project.yml
+++ b/project.yml
@@ -53,7 +53,7 @@ sidebar:
             url: /hu_luhu_71.html
         - title: Learn about the Linux sanlun utility 
           url: /hu-luhu-sanlun-utility.html
-        - title: Sample command reference
+        - title: Linux Host Utilities command reference
           url: /hu_luhu_71_cmd.html
         
       - title: Solaris Host Utilities
