--- a/_index.yml
+++ b/_index.yml
@@ -17,7 +17,7 @@ indexpage:
         - title: Solaris Host Utilities release notes
           url: /hu_solaris_62_rn.html 
         - title: Windows Host Utilities release notes
-          url: /hu_wuhu_71_rn.html                       
+          url: /hu-wuhu-release-notes.html                       
     - title: Install and configure SAN hosts
       links:
         - title: Install SAN Host Utilities 
