--- a/project.yml
+++ b/project.yml
@@ -61,17 +61,22 @@ sidebar:
       - title: Windows Host Utilities
         entries:
           - title: Release notes
-            url: /hu_wuhu_71_rn.html
-          - title: Install Windows Host Utilities 7.2
-            url: /hu_wuhu_72.html
-          - title: Install Windows Host Utilities 7.1
-            url: /hu_wuhu_71.html 
+            url: /hu-wuhu-release-notes.html
+          - title: Install Windows Host Utilities 
+            entries:
+              - title: Install Windows Host Utilities 8.0
+                url: /hu-wuhu-80.html
+              - title: Install Windows Host Utilities 7.2
+                url: /hu_wuhu_72.html
+              - title: Install Windows Host Utilities 7.1
+                url: /hu_wuhu_71.html 
+          - title: Configure registry settings
+            url: /hu_wuhu_hba_settings.html
           - title: Upgrade Windows Host Utilities
             url: /hu_wuhu_upgrade.html
           - title: Repair and remove Windows Host Utilities
             url: /hu_wuhu_repair_remove.html
-          - title: Configure registry settings
-            url: /hu_wuhu_hba_settings.html
+          
           - title: Troubleshoot
             url: /hu_wuhu_troubleshoot.html          
     - title: Configure hosts with FCP and iSCSI
