Add OL 9.5 fcp and iSCSI

--- a/project.yml
+++ b/project.yml
@@ -161,6 +161,8 @@ sidebar:
         entries:
         - title: OL 9
           entries:
+          - title: "9.5"
+            url: /hu-ol-95.html
           - title: "9.4"
             url: /hu_ol_94.html
           - title: "9.3"
