ontapdoc-2984 NVMe 9.6 updates

--- a/project.yml
+++ b/project.yml
@@ -247,6 +247,8 @@ sidebar:
         - title: RHEL 9
           pdf-filename: RHEL-9-FCP
           entries:
+          - title: "9.6"
+            url: /hu_rhel_96.html
           - title: "9.5"
             url: /hu_rhel_95.html
           - title: "9.4"
@@ -457,6 +459,8 @@ sidebar:
         entries:
         - title: RHEL 9
           entries:
+          - title: "9.6"
+            url: /nvme_rhel_96.html
           - title: "9.5"
             url: /nvme_rhel_95.html
           - title: "9.4"
