--- a/project.yml
+++ b/project.yml
@@ -70,7 +70,7 @@ sidebar:
                 url: /hu_wuhu_72.html
               - title: Install Windows Host Utilities 7.1
                 url: /hu_wuhu_71.html 
-          - title: Configure registry settings
+          - title: Configure settings for Windows Host Utilities
             url: /hu_wuhu_hba_settings.html
           - title: Upgrade Windows Host Utilities
             url: /hu_wuhu_upgrade.html
