--- a/project.yml
+++ b/project.yml
@@ -146,6 +146,8 @@ sidebar:
             url: /hu_centos_64.html
       - title: Citrix
         entries:
+        - title: XenServer 8.4
+          url: /hu_citrix_84.html
         - title: XenServer 8.2
           url: /hu_citrix_82.html
         - title: Hypervisor 8
