--- a/project.yml
+++ b/project.yml
@@ -35,10 +35,12 @@ sidebar:
       - title: HP-UX Host Utilities
         entries:
          - title: Release notes
-           url: /hu_hpux_60_rn.html
+           url: /hu-hpux-release-notes.html
          - title: Install HP-UX HU 6.0
            url: /hu_hpux_60.html
-         - title: Sample command reference
+         - title: Learn about the HP-UX sanlun utility
+           url: /hu-hpux-sanlun-utility.html
+         - title: HP-UX Host Utilities sample command reference
            url: /hu_hpux_60_cmd.html
          
       - title: Linux Host Utilities
@@ -53,7 +55,7 @@ sidebar:
             url: /hu_luhu_71.html
         - title: Learn about the Linux sanlun utility 
           url: /hu-luhu-sanlun-utility.html
-        - title: Linux Host Utilities command reference
+        - title: Linux Host Utilities sample command reference
           url: /hu_luhu_71_cmd.html
         
       - title: Solaris Host Utilities
