--- a/_index.yml
+++ b/_index.yml
@@ -8,15 +8,15 @@ indexpage:
       links:
         - title: Product overview
           url: /overview.html
-        - title: AIX Host Utilities release notes
+        - title: AIX Host Utilities Release Notes
           url: /hu-aix-rn.html
-        - title: HP-UX Host Utilities release notes
+        - title: HP-UX Host Utilities Release Rotes
           url: /hu_hpux_60_rn.html
-        - title: Linux Host Utilities release notes
+        - title: Linux Host Utilities Release Notes
           url: /hu_luhu_71_rn.html
-        - title: Solaris Host Utilities release notes
+        - title: Solaris Host Utilities Release Notes
           url: /hu-solaris-release-notes.html 
-        - title: Windows Host Utilities release notes
+        - title: Windows Host Utilities Release Notes
           url: /hu-wuhu-rn.html                       
     - title: Install and configure SAN hosts
       links:
