--- a/project.yml
+++ b/project.yml
@@ -50,7 +50,7 @@ sidebar:
           url: /hu_luhu_71_cmd.html
       - title: Solaris Host Utilities
         entries:
-        - title: Solaris Host Utilities Release Notes
+        - title: Release notes
           url: /hu-solaris-release-notes.html
         - title: Install Solaris Host Utilities
           entries:
