--- a/project.yml
+++ b/project.yml
@@ -51,7 +51,7 @@ sidebar:
             url: /hu-luhu-80.html
           - title: Install Linux Host Utilities 7.1
             url: /hu_luhu_71.html
-        - title: Learn about the Linux sanlun utility 
+        - title: Learn about the sanlun utility 
           url: /hu-luhu-sanlun-utility.html
         - title: Linux Host Utilities command reference
           url: /hu-luhu-command-reference.html
