--- a/project.yml
+++ b/project.yml
@@ -58,7 +58,7 @@ sidebar:
             url: /hu-solaris-80.html
           - title: Install Solaris Host Utilities 6.2
             url: /hu_solaris_62.html
-        - title: Learn about the Solaris SAN Toolkit
+        - title: Learn about the SAN Toolkit
           url: /hu-solaris-san-toolkit.html
         - title: Learn about the Solaris command reference
           url: /hu-solaris-command-reference.html
