Edits post meeting with SME and other minor updates

--- a/project.yml
+++ b/project.yml
@@ -38,9 +38,9 @@ sidebar:
            url: /hu-hpux-release-notes.html
          - title: Install HP-UX HU 6.0
            url: /hu_hpux_60.html
-         - title: Learn about the HP-UX sanlun utility
-           url: /hu-hpux-sanlun-utility.html
-         - title: HP-UX Host Utilities sample command reference
+         - title: Learn about the SAN Toolkit
+           url: /hu-hpux-sanlun-toolkit.html
+         - title: Learn about the HP-UX command reference
            url: /hu_hpux_60_cmd.html
          
       - title: Linux Host Utilities
