ontapdoc-3045 project yml update

--- a/project.yml
+++ b/project.yml
@@ -142,7 +142,7 @@ sidebar:
         entries:
         - title: XenServer 8.4
           url: /hu_citrix_84.html 
-        - title: XenServer 8.2
+        - title: Hypervisor 8.2
           url: /hu_citrix_82.html
         - title: XenServer 7
           url: /hu_citrix_7x.html
