ontapdoc-2984 correcting LIPI errors

--- a/project.yml
+++ b/project.yml
@@ -247,7 +247,7 @@ sidebar:
           pdf-filename: RHEL-9-FCP
           entries:
           - title: "9.6"
-            url: /hu_rhel_96.html
+            url: /hu-rhel-96.html
           - title: "9.5"
             url: /hu_rhel_95.html
           - title: "9.4"
@@ -463,7 +463,7 @@ sidebar:
         - title: RHEL 9
           entries:
           - title: "9.6"
-            url: /nvme_rhel_96.html
+            url: /nvme-rhel-96.html
           - title: "9.5"
             url: /nvme_rhel_95.html
           - title: "9.4"
